Add test and pr feedback